# Advanced-Programming-Sheep-Fight

./: CMakeLists.txt  FixClionAbsolutePathBug.MD  Makefile  SheepFight
header/: Game.h  Health.h  Indicator.h  Manual.h  Score.h
src/: Animal.cpp  Animal.h  Game.cpp  Game.h  Health.cpp  Health.h  Indicator.cpp  Indicator.h  Line.cpp  Line.h  Manual.h  Player.cpp  Player.h  Queue.cpp  Queue.h  Score.cpp
